--- a/woricow-head/head-shoping.html
+++ b/woricow-head/head-shoping.html
@@ -39,7 +39,6 @@
                               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="D:\Web_Design\4th Sem Project\login\index.html"><i class="fa-solid fa-right-to-bracket mr-2"></i>Login</a>
                                 <a class="dropdown-item" href="D:\Web_Design\4th Sem Project\singup\index.html"><i class="fa-solid fa-user-plus mr-2"></i>Singup</a>
-                                <a class="dropdown-item" href="#"><i class="fa-solid fa-cart-shopping mr-2"></i>Cart</a>
                               </div>
                             </li>
                           </ul>
@@ -77,7 +76,7 @@
                   <p><i class="fa-solid fa-tag mr-1"></i>Bank OfferFlat ₹1,000 off on OneCard Credit Card and Credit EMI Transactions on orders of ₹10,000 and above</p>
                   <p><i class="fa-solid fa-tag mr-1"></i>Bank Offer8% off on Yes Bank Credit Card EMI Transactions, up to ₹2,000 on orders of ₹10,000 and above</p>
                   <input type="number" value="1" style="width: 50px;height: 35px;"    id="quantityInput" min="1" value="1" oninput="calculateTotal()"><br><br>
-                  <button type="button" class="btn btn-outline-secondary">Book Now</button><br><br>
+                  <button type="button" class="btn btn-outline-secondary"><a class="text-dark" href="D:\Web_Design\4th Sem Project\buy now\buy.html">Buy Now</a></button><br><br>
                   <p>Total Price: <i class="fa-solid fa-indian-rupee-sign mr-1"></i><span id="totalPrice" style="font-weight: bold;">599</span></p>
                   <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1" checked>
